--- a/package.json
+++ b/package.json
@@ -1,19 +1,64 @@
 {
-  "name": "@amzn/amazon-ivs-eeg-demo",
+  "name": "muse-bttc",
   "version": "0.1.0",
-  "description": "",
-  "author": "",
-  "license": "UNLICENSED",
-  "repository": "ssh://git.amazon.com/pkg/Amazon-ivs-eeg-demo",
-  "homepage": "https://code.amazon.com/packages/Amazon-ivs-eeg-demo",
-  "scripts": {
-    "test": "echo 'running tests'",
-    "build": "echo 'building the packages'",
-    "prepublishOnly": "npm run build && npm run test"
+  "private": true,
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@neurosity/pipes": "^3.2.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "amazon-ivs-web-broadcast": "^1.1.0",
+    "bootstrap": "^5.2.0",
+    "chart.js": "^3.9.1",
+    "muse-js": "^3.3.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-chartjs-2": "^4.3.1",
+    "react-dom": "^18.2.0",
+    "react-number-format": "^4.9.3",
+    "react-router-bootstrap": "^0.26.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.2",
+    "swr": "^1.2.2",
+    "web-vitals": "^2.1.4"
   },
-  "files": [],
-  "npm-pretty-much": {
-    "runTest": "never",
-    "ciBuild": "always"
+  "resolutions": {
+    "node-forge": "^0.10.0",
+    "is-svg": ">=4.2.2",
+    "dns-packet": ">=5.2.2",
+    "browserslist": ">=4.16.5"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "eslint": "^8.23.0",
+    "eslint-plugin-react": "^7.31.1"
   }
 }
