--- a/ui/package.json
+++ b/ui/package.json
@@ -34,7 +34,7 @@
     "browserslist": ">=4.16.5"
   },
   "scripts": {
-    "start": "GENERATE_SOURCEMAP=false react-scripts start",
+    "start": "PORT=5000 GENERATE_SOURCEMAP=false react-scripts start",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "GENERATE_SOURCEMAP=false react-scripts test",
     "eject": "react-scripts eject"
